fix: eliminate wrap overlapping slider arrows

--- a/source/sass/blocks/slider-arrows.scss
+++ b/source/sass/blocks/slider-arrows.scss
@@ -1,3 +1,7 @@
+.slider-arrows {
+  visibility: hidden;
+}
+
 .slider-arrows__list {
   display: flex;
   padding: 0;
@@ -6,7 +10,6 @@
   gap: 8px;
   justify-content: space-between;
   align-items: center;
-  visibility: hidden;
 
   @media (min-width: $desktop-width) {
     gap: 12px;
